[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "lil_docker"
categories = ["command-line-utilities"]
keywords = ["docker", "run", "container", "linux"]
homepage = "https://github.com/m1guelpf/lil-docker"
repository = "https://github.com/m1guelpf/lil-docker"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
description = "An intentionally-limited Rust implementation of the Docker run command."

[dependencies]
bytes = "1.3.0"
libc = "0.2.103"
serde = "1.0.136"
anyhow = "1.0.59"
serde_json = "1.0.79"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
tar = "0.4.38"
flate2 = "1.0.25"
tempdir = "0.3.7"
